--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>site.romvoid</groupId>
-    <artifactId>HttpRequest</artifactId>
+    <artifactId>HttpLib</artifactId>
     <version>1.0.0</version>
     <build>
         <plugins>
